add my mini-lightbox v0.5, change links design

--- a/Surf/i.html
+++ b/Surf/i.html
@@ -1,6 +1,6 @@
 
-<div id="pageTitle" style="display: none">Surfing</div>
-<div id="headerTitle" style="display: none"><span>Surfing</span></div>
+<div id="pageTitle">Surfing</div>
+<div id="headerTitle"><span>Surfing</span></div>
 
 <article>
 
