--- a/programming/angular.html
+++ b/programming/angular.html
@@ -23,33 +23,33 @@
 </header>
 
     <script src="../JS/leoscript.js" async></script>
-<div id="links">
-  <a href="https://angular.io"><img src="https://angular.io/assets/images/favicons/favicon.ico"></a>
 
-  <a href="https://angularjs.org/">angularJS.org</a>
-  <a href="https://ru.wikipedia.org/wiki/AngularJS">AngularJSwiki</a>
-  <a href="https://itvdn.com/ru/catalog?search=angular"><img src="https://itvdn.com/Content/img/header/logo.svg" alt="itvdn"></a>
+
+
+<div class="flex">
+  <div id="links">
+    <a href="https://angular.io"><img src="https://angular.io/assets/images/favicons/favicon.ico"></a><br>
+    <a href="https://angularjs.org/">angularJS.org</a><br>
+    <a href="https://ru.wikipedia.org/wiki/AngularJS">AngularJSwiki</a><br>
+    <a href="https://itvdn.com/ru/catalog?search=angular"><img src="https://itvdn.com/Content/img/header/logo.svg" alt="itvdn"></a><br>
+    <a href="https://youtu.be/m0yGx2MGZWg"> Что такое Angular. Обзор возможностей</a><br>
+    <li><a href="https://youtu.be/s9Ig44UBr38"> Как стать Angular разработчиком (Web Developer Blog)</a></li>
+    <li><a href="https://www.youtube.com/watch?v=Jrer19KiDQg&list=PLVfMKQXDAhGW12JY3SfeDnEx7S5_tn11j"> Уроки Angular 7 (Web Developer Blog)</a></li>
+    MVC <br>   
+  </div>
+
+  <article> 
+    <тэг ng-app ><br>
+    {{2+2}} <br>
+    <тэг ng-model="name"> {{name}} <br>
+    ng-init <br>
+    ng-repeat <br>
+    <див ng-app ng-init="students=['David','Steve','Bob']"><br>
+    <ол><ли ng-repeat="name in students"> {{ name }} </ли> </ол> </див><br>
+    
+  </article>
 </div>
-
-<nav>
-  
-</nav>
-
-<article>
-
-  <a href="https://youtu.be/m0yGx2MGZWg"> Что такое Angular. Обзор возможностей</a><br>
-  <тэг ng-app ><br>
-  {{2+2}} <br>
-  <тэг ng-model="name"> {{name}} <br>
-  ng-init <br>
-  ng-repeat <br>
-  <див ng-app ng-init="students=['David','Steve','Bob']">
-  <ол><ли ng-repeat="name in students"> {{ name }} </ли> </ол> </див><br>
-  <hr>
-  <li><a href="https://youtu.be/s9Ig44UBr38"> Как стать Angular разработчиком (Web Developer Blog)</a></li>
-  <li><a href="https://www.youtube.com/watch?v=Jrer19KiDQg&list=PLVfMKQXDAhGW12JY3SfeDnEx7S5_tn11j"> Уроки Angular 7 (Web Developer Blog)</a></li>
-  MVC <br>   
-</article>
+<div style="height: 50vh"></div>
 
 <footer></footer>
 
