--- a/programming/css.html
+++ b/programming/css.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../CSS/leonardasf1.css">
 <style>
 .h1 {font-size: 2rem}
+#links img { height: 16px }
 </style>
 
     <link rel="stylesheet" href="../CSS/highlight.css">
@@ -26,73 +27,70 @@
     </div>
   </header>
     <script src="../JS/leoscript.js" async></script>
-
-<div id="links">
-  <a href="https://drafts.csswg.org/"><img src="https://drafts.csswg.org/csslogo.ico" alt="csswg"></a>
-  <a href="https://www.w3.org/TR/CSS/#css"><img src="https://www.w3.org/favicon.ico" alt="w3"></a>
-  <a href="https://css-tricks.com"><img src="https://css-tricks.com/apple-touch-icon.png" alt="css-tricks"></a>
-  <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="CSS MDN"></a>
-  <a href="https://webref.ru"><img src="https://webref.ru/favicon.ico" alt="webref.ru"></a>
-  <a href="https://jigsaw.w3.org/css-validator/">validator</a>
-  <a href="https://csscompressor.com/">csscompressor</a>
-  <a href="https://www.generateit.net/css-optimize/index.php">generateit.net/css-optimize</a>
-  <a href="http://tools.w3clubs.com/cssmin/">tools.w3clubs.com/cssmin</a>
-  <a href="https://github.com/mrclay/minify">minify</a>
-  <a href="http://uroki-css.ru">uroki-css</a>
-
+<div class="flex">
+  <div id="links">
+    <a href="https://drafts.csswg.org/"><img src="https://drafts.csswg.org/csslogo.ico" alt="csswg"></a>
+    <a href="https://www.w3.org/TR/CSS/#css"><img src="https://www.w3.org/favicon.ico" alt="w3"></a>
+    <a href="https://css-tricks.com"><img src="https://css-tricks.com/apple-touch-icon.png" alt="css-tricks"></a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="CSS MDN"></a>
+    <a href="https://webref.ru"><img src="https://webref.ru/favicon.ico" alt="webref.ru"></a><br>
+    <a href="https://jigsaw.w3.org/css-validator/">validator</a><br>
+    <a href="https://csscompressor.com/">csscompressor</a><br>
+    <a href="https://www.generateit.net/css-optimize/index.php">generateit.net/css-optimize</a><br>
+    <a href="http://tools.w3clubs.com/cssmin/">tools.w3clubs.com/cssmin</a><br>
+    <a href="https://github.com/mrclay/minify">minify</a><br>
+    <a href="http://uroki-css.ru">uroki-css</a><br>
+    reshadow <a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"></a>
+    <a href="https://github.com/lttb/reshadow"><img src="https://github.githubassets.com/favicon.ico" alt="github.com/lttb/reshadow" height="16px"></a>
+   / cssinjs / styled components / BEM (block element modifier) / CSS Modules , пропсы <br>
+    <a href="http://htmlbook.ru/samcss/napisanie-effektivnogo-koda"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"> Написание эффективного кода</a><br>
+    <a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a><br>
+    шлюзы<br>
+    <a href="https://whitepaper.tools"><img src="http://whitepaper.tools/favicon.ico" alt="whitepaper tools"> whitepaper.tools</a>
+  </div>
+  <div>
+  Backgrounds and Borders 3 //2017<br>
+  Basic User Interface 3 (CSS3 UI)  //2018<br>
+  Cascading and Inheritance 3 //2018<br>
+  Cascading and Inheritance 4 //2018<br>
+  Color 3 //2018<br>
+  Compositing and Blending 1 //2015<br>
+  Conditional Rules 3 //2013<br>
+  Containment 1 //2019<br>
+  Counter Styles 3 //2017<br>
+  Custom Properties for Cascading Variables 1 //2015<br>
+  Display 3 //2018<br>
+  Easing Functions 1 //2019<br>
+  Flexible Box Layout 1 //2018<br>
+  Fonts 3 //2018<br>
+  Fragmentation 3 //2018<br>
+  Geometry Interfaces 1 //2018<br>
+  Grid Layout 1 //2017<br>
+  Images 3 //2019<br>
+  Masking 1 //2014<br>
+  MathML for CSS Profile //2011<br>
+  Media Queries //2012<br>
+  Media Queries 4 //2017<br>
+  Namespaces 3 //2014<br>
+  Painting API 1 //2018<br>
+  Scroll Snap 1 //2019<br>
+  Selectors 3 //2018<br>
+  Selectors API 1 //2013<br>
+  Shapes 1 //2014<br>
+  Snapshot 2018 //2019<br>
+  Style Attributes //2013<br>
+  Syntax 3 //2019<br>
+  Template Layout //2015<br>
+  Text Decoration 3 //2019<br>
+  Values and Units 3 //2019<br>
+  Will Change 1 //2015<br>
+  Writing Modes 3 //2019<br>
+  Writing Modes 4 //2019<br>
+  </div>
 </div>
 
 <article>
-  <br>
-reshadow
- <a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"></a>
- <a href="https://github.com/lttb/reshadow"><img src="https://github.githubassets.com/favicon.ico" alt="github.com/lttb/reshadow" height="16px"></a>
- / cssinjs / styled components / BEM (block element modifier) / CSS Modules , пропсы <br>
-  <a href="http://htmlbook.ru/samcss/napisanie-effektivnogo-koda"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"> Написание эффективного кода</a><br>
-  <a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a><br>
-  переменные, шлюзы<br>
-<a href="https://whitepaper.tools"><img src="http://whitepaper.tools/favicon.ico" alt="whitepaper tools"> whitepaper.tools</a>
-        <pre>
-
-Backgrounds and Borders 3 //2017
-Basic User Interface 3 (CSS3 UI)  //2018
-Cascading and Inheritance 3 //2018
-Cascading and Inheritance 4 //2018
-Color 3 //2018
-Compositing and Blending 1 //2015
-Conditional Rules 3 //2013
-Containment 1 //2019
-Counter Styles 3 //2017
-Custom Properties for Cascading Variables 1 //2015
-Display 3 //2018
-Easing Functions 1 //2019
-Flexible Box Layout 1 //2018
-Fonts 3 //2018
-Fragmentation 3 //2018
-Geometry Interfaces 1 //2018
-Grid Layout 1 //2017
-Images 3 //2019
-Masking 1 //2014
-MathML for CSS Profile //2011
-Media Queries //2012
-Media Queries 4 //2017
-Namespaces 3 //2014
-Painting API 1 //2018
-Scroll Snap 1 //2019
-Selectors 3 //2018
-Selectors API 1 //2013
-Shapes 1 //2014
-Snapshot 2018 //2019
-Style Attributes //2013
-Syntax 3 //2019
-Template Layout //2015
-Text Decoration 3 //2019
-Values and Units 3 //2019
-Will Change 1 //2015
-Writing Modes 3 //2019
-Writing Modes 4 //2019
-
-          <code class="CSS">
+  <pre><code class="CSS">
 внешний: тег link rel="stylesheet" href="*.css"
 в документе: тег style /style
 внутри тега: style=""
@@ -643,6 +641,9 @@ sel[атрибут] для элемента с атрибутом
 </div>
 
 <h3>{ свойство: значение; }</h3>
+height: min-content;
+
+quotes: "\201C" "\201D";
 
 box-shadow: 2px 2px 2px rgba(255,5,5,.5); inset (тень внутри)
 box-sizing: content-box | border-box | padding-box;
