--- a/programming/html.html
+++ b/programming/html.html
@@ -21,25 +21,22 @@
 </header>
 
     <script src="../JS/leoscript.js" async></script>
-    
-<div id="links">
-	<a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="mozilla"></a>
-  <a href="https://www.w3.org/html/"><img src="https://www.w3.org/favicon.ico" alt="w3.org"></a>
-  <a href="https://caniuse.com/"><img src="https://caniuse.com/img/favicon-128.png" alt="caniuse"></a>
-  <a href="http://html5test.com/"><img src="http://html5test.com/images/icons/favicon-32x32.png" alt="html5test"></a>
-  <a href="https://itvdn.com/ru/search?query=html"><img src="https://itvdn.com/Content/img/header/logo.svg" alt="itvdn"></a>
-  <a href="http://htmlbook.ru/samhtml"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"></a>
-  <a href="https://developers.google.com/web/">dev.google</a>
-  <a href="https://webref.ru">WebRef</a>
-  <a href="https://vk.com/doc166724508_450973233?hash=e71c58d38f7ececc49&dl=64797a3026e3009efb">Пилгрим-М.-Погружение-в-HTML5-2011.djvu 5.6 МБ</a>
-  <a href="https://schema.org/docs/gs.html"><img src="https://schema.org/docs/favicon.ico" alt="schema"></a>
-</div>
 
-<nav>
-  
-</nav>
+<div class="flex">
+  <div id="links">
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="mozilla"></a>
+    <a href="https://www.w3.org/html/"><img src="https://www.w3.org/favicon.ico" alt="w3.org"></a>
+    <a href="https://caniuse.com/"><img src="https://caniuse.com/img/favicon-128.png" alt="caniuse"></a>
+    <a href="http://html5test.com/"><img src="http://html5test.com/images/icons/favicon-32x32.png" alt="html5test"></a>
+    <a href="https://itvdn.com/ru/search?query=html"><img src="https://itvdn.com/Content/img/header/logo.svg" alt="itvdn"></a>
+    <a href="http://htmlbook.ru/samhtml"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"></a>
+    <a href="https://schema.org/docs/gs.html"><img src="https://schema.org/docs/favicon.ico" alt="schema"></a><br>
+    <a href="https://developers.google.com/web/">dev.google</a><br>
+    <a href="https://webref.ru">WebRef</a><br>
+    <a href="https://vk.com/doc166724508_450973233?hash=e71c58d38f7ececc49&dl=64797a3026e3009efb">Пилгрим-М.-Погружение-в-HTML5-2011.djvu 5.6 МБ</a><br>
+  </div>
 
-<article>
+  <div>
 <details><summary>form</summary><div>
 < form action="*.html" method="post | get" enctype="text/plain | multipart/form-data" autocomplete="on" ><br>
 autocomplete="on"<br>
@@ -139,17 +136,6 @@ value=""</pre>
 </form>
 </div></details>
 
-
-  <a href="http://htmlbook.ru/html/a/rel" target="_blank">attr rel</a> <a href="http://htmlbook.ru/html/value/mime">MIME-типы</a>
-
-  < !--comments-->
-  <hr color="red" width="600px" size="5px" align="left" noshade="noshade"> is obsolete
-  <hr style="color:red; width:600px; height:5px" noshade>
-
-  <center>< center> / is obsolete</center>
-
-  <div><MARQUEE loop="1">< MARQUEE> /</MARQUEE></div>
-
   <a href="#" id="id" target="_blank" title="title" rel="" accesskey="t" type="text/html" download="">a href="#" id="id" target="_blank" title="title" rel="" accesskey="t" type="text/html"</a><br>
   <a href="#" target="_self">target="_self"</a><br>
   <a href="#" target="_top">target="_top"</a> <br>
@@ -164,6 +150,22 @@ value=""</pre>
 
    <a href="#c6">< a href="#c6"> /</a>
   <a id="c6">< a id="c6"> /</a>
+</div>
+
+</div>
+
+<article>
+
+
+  <a href="http://htmlbook.ru/html/a/rel" target="_blank">attr rel</a> <a href="http://htmlbook.ru/html/value/mime">MIME-типы</a>
+
+  < !--comments-->
+  <hr color="red" width="600px" size="5px" align="left" noshade="noshade"> is obsolete
+  <hr style="color:red; width:600px; height:5px" noshade>
+
+  <center>< center> / is obsolete</center>
+
+  <div><MARQUEE loop="1">< MARQUEE> /</MARQUEE></div>
 
   <pre>
     < pre> / Lorem ipsum dolor sit amet,
