--- a/programming/index.html
+++ b/programming/index.html
@@ -32,20 +32,6 @@ h2 {margin-top: 0px}
         </div> 
     </header>
 
-    <div id="links">
-        <a href="https://itvdn.com/ru/catalog"><img src="https://itvdn.com/Content/img/header/logo.svg" alt="itvdn"></a>
-        <a href="https://loftblog.ru/"><img src="https://loftblog.ru/favicon/apple-touch-icon.png" alt=""></a>
-        <a href="https://devsday.ru/event/list"><img src="https://devsday.ru/favicon.png" alt=""></a>
-        <a href="https://events.yandex.ru/"><img src="https://yastatic.net/s3/distribution/promo/react-yandex-favicon/vv0.1.1/favicons/ru/favicon-32x32.png" alt=""></a>
-        <a href="https://corp.mail.ru/ru/press/events/"><img src="https://limg.imgsmail.ru/re/i/apple-touch-icon-114x114-ee8777f5e3.png" alt=""></a>
-        <a href="https://github.com"><img src="https://github.githubassets.com/favicon.ico" alt="github"></a>
-        <a href="https://stackoverflow.com/tags"><img src="https://cdn.sstatic.net/Sites/stackoverflow/img/favicon.ico" alt="stackoverflow"></a>
-        <a href="https://codesandbox.io"><img src="https://codesandbox.io/favicon.ico" alt="codesandbox"></a>
-        <a href="https://codepen.io"><img src="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" alt="codepen"></a>
-        <a href="https://jsfiddle.net/"><img src="http://jsfiddle.net/img/favicon.png" alt="jsfiddle.net"></a>
-        <a href="https://ideone.com"><img src="https://ideone.com/gfx2/img/favicon.png" alt="ideone"></a>
-    </div>
-
     <nav>
         <a href="html.html">
             <img src="../icons/html.svg" alt="html5">
@@ -90,6 +76,21 @@ h2 {margin-top: 0px}
 
 <article>
 <div class="flex">
+
+<div id="links">
+    <a href="https://itvdn.com/ru/catalog" style="padding-left: 0; background: none"><img src="https://itvdn.com/Content/img/header/logo.svg" alt="itvdn"></a>
+    <a href="https://loftblog.ru/"><img src="https://loftblog.ru/favicon/apple-touch-icon.png" alt=""></a>
+    <a href="https://devsday.ru/event/list"><img src="https://devsday.ru/favicon.png" alt=""></a>
+    <a href="https://events.yandex.ru/"><img src="https://yastatic.net/s3/distribution/promo/react-yandex-favicon/vv0.1.1/favicons/ru/favicon-32x32.png" alt=""></a>
+    <a href="https://corp.mail.ru/ru/press/events/"><img src="https://limg.imgsmail.ru/re/i/apple-touch-icon-114x114-ee8777f5e3.png" alt=""></a>
+    <a href="https://github.com"><img src="https://github.githubassets.com/favicon.ico" alt="github"></a>
+    <a href="https://stackoverflow.com/tags"><img src="https://cdn.sstatic.net/Sites/stackoverflow/img/favicon.ico" alt="stackoverflow"></a>
+    <a href="https://codesandbox.io"><img src="https://codesandbox.io/favicon.ico" alt="codesandbox"></a>
+    <a href="https://codepen.io"><img src="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" alt="codepen"></a>
+    <a href="https://jsfiddle.net/"><img src="http://jsfiddle.net/img/favicon.png" alt="jsfiddle.net"></a>
+    <a href="https://ideone.com"><img src="https://ideone.com/gfx2/img/favicon.png" alt="ideone"></a>
+</div>
+
 <div>
     <a href="https://youtu.be/1U4NrB9v9ZA">Я.Субботник по разработке интерфейсов. лето2019</a><br>
     <a href="https://youtu.be/jPqNyF0hH3k">Я.Субботник по разработке интерфейсов. весна2019</a><br>
@@ -338,6 +339,21 @@ const VAR_NAME: u32 = 100_000; // константа: тип данных
     <ul>
         <a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a><br>
         <a href="https://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Development Kit</a><br>
+    </ul>
+</div>
+
+<div>
+    HotKeys / Key Bindings
+    <ul>
+        <li><a href="https://support.apple.com/ru-ru/HT201236"><img src="../icons/apple.svg" alt="Mac hotkeys"> Mac</a></li>
+        <li><a href="https://sublimetext.ru/documentation/hotkeys/osx"><img src="https://www.sublimetext.com/favicon.ico" alt="sublime hotkeys"> Sublime Text</a></li>
+        <li><a href="https://code.visualstudio.com/docs/getstarted/keybindings"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg" alt="VS Code hotkeys"> Visual Studio Code</a></li>
+        <li>
+            <a href="https://theprops.space/cheatsheet-vimium">Vimium</a>
+            <a href="http://vimium.github.io"><img src="https://github.githubassets.com/favicon.ico" alt="vimium.github.io"></a>
+            <a href="https://bit.ly/1iVJ5cM"><img src="https://www.chromestatus.com/static/img/chrome_logo.svg" alt="Vimium Chrome"></a>
+            <a href="https://mzl.la/2TDuvx2"><img src="https://platform-status.mozilla.org/images/favicon.ico" alt="VimiumFF"></a>
+        </li>
     </ul>
 </div>
 
