--- a/programming/vue.html
+++ b/programming/vue.html
@@ -27,26 +27,26 @@
 </header>
 
     <script src="../JS/leoscript.js" async></script>
-
-<div id="links">
-  <a href="https://vuejs.org"><img src="../icons/vue.svg"></a>
-  <a href="https://github.com/vuejs/vue"><img src="https://github.githubassets.com/favicon.ico" alt="github"></a>
-  <a href="https://nuxtjs.org/"><img src="https://nuxtjs.org/logos/nuxt.svg" alt="nuxt">nuxt</a>
-  <a href="https://vuetifyjs.com/en/"><img src="https://vuetifyjs.com/favicon.ico" alt="vuetify"></a>
+<div class="flex">
+  <div id="links">
+    <a href="https://vuejs.org"><img src="../icons/vue.svg"></a>
+    <a href="https://github.com/vuejs/vue"><img src="https://github.githubassets.com/favicon.ico" alt="github"></a>
+    <a href="https://nuxtjs.org/"><img src="https://nuxtjs.org/logos/nuxt.svg" alt="nuxt">nuxt</a>
+    <a href="https://vuetifyjs.com/en/"><img src="https://vuetifyjs.com/favicon.ico" alt="vuetify"></a>
+    <br>
+    <a href="https://ru.vuejs.org/v2/guide/">vuejs.org/v2/guide</a><br>
+    <a href="https://itvdn.com/ru/video/vuejs">Vue.js Starter (itvdn. 2017)</a><br>
+    <a href="https://itvdn.com/ru/video/vuejs-essential">Vue.js Essential</a><br>
+    <a href="https://itvdn.com/ru/channel/video/vuejs">Возможности Vue.js для веб разработчика. 2017</a><br>
+    <a href="https://itvdn.com/ru/blog/article/jquery-to-vuejs">Переход с jQuery на Vue.js (itvdn)</a><br>
+    <a href="https://www.youtube.com/watch?v=IMYO487lpxg&list=PLVfMKQXDAhGWFP61AzOs_PowY7OAaFRHU"> Уроки Vue js (Web Developer Blog)</a><br>
+    <a href="https://youtu.be/nh6dH6OzmXE">10 вещей о Vue, которые вам стоит знать. 2019</a><br>
+    <a href="https://youtu.be/xot0SjunN2U">Специфика рендеринга vue.js-приложений на сервере. 2019</a><br>
+    <a href="https://youtu.be/Ynhk9GqSsZI">Nuxt.js from the Core. 2019</a><br>
+  </div>
 </div>
 
 <article>
-  <a href="https://ru.vuejs.org/v2/guide/">vuejs.org/v2/guide</a><br>
-  <a href="https://itvdn.com/ru/video/vuejs">Vue.js Starter (itvdn. 2017)</a><br>
-  <a href="https://itvdn.com/ru/video/vuejs-essential">Vue.js Essential</a><br>
-  <a href="https://itvdn.com/ru/channel/video/vuejs">Возможности Vue.js для веб разработчика. 2017</a><br>
-  <a href="https://itvdn.com/ru/blog/article/jquery-to-vuejs">Переход с jQuery на Vue.js (itvdn)</a><br>
-  <a href="https://www.youtube.com/watch?v=IMYO487lpxg&list=PLVfMKQXDAhGWFP61AzOs_PowY7OAaFRHU"> Уроки Vue js (Web Developer Blog)</a><br>
-  <a href="https://youtu.be/nh6dH6OzmXE">10 вещей о Vue, которые вам стоит знать. 2019</a><br>
-  <a href="https://youtu.be/xot0SjunN2U">Специфика рендеринга vue.js-приложений на сервере. 2019</a><br>
-  <a href="https://youtu.be/Ynhk9GqSsZI">Nuxt.js from the Core. 2019</a><br>
-
-
   <pre>
     не использует $ и _
     <code class="javascript">
