--- a/programming/react.html
+++ b/programming/react.html
@@ -29,11 +29,12 @@
   </header>
 
 <script src="../JS/leoscript.js" defer></script>
-
-<div id="links">
-    <a href="https://reactjs.org/"><img src="../icons/react.svg" alt="reactjs.org"></a>
-    <a href="https://github.com/facebook/react"><img src="https://github.githubassets.com/favicon.ico" alt="GitHub"></a>
-    <a href="https://nextjs.org/"><img src="https://nextjs.org/static/favicon/favicon-32x32.png" alt="next.js"></a>
+<div class="flex">
+    <div id="links">
+        <a href="https://reactjs.org/"><img src="../icons/react.svg" alt="reactjs.org"></a>
+        <a href="https://github.com/facebook/react"><img src="https://github.githubassets.com/favicon.ico" alt="GitHub"></a>
+        <a href="https://nextjs.org/"><img src="https://nextjs.org/static/favicon/favicon-32x32.png" alt="next.js"></a>
+    </div>
 </div>
 
         <article style="display: flex; background-color: rgba(0,0,0,0.2)">
