--- a/programming/css.html
+++ b/programming/css.html
@@ -40,13 +40,17 @@
     <a href="http://tools.w3clubs.com/cssmin/">tools.w3clubs.com/cssmin</a><br>
     <a href="https://github.com/mrclay/minify">minify</a><br>
     <a href="http://uroki-css.ru">uroki-css</a><br>
-    reshadow <a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"></a>
-    <a href="https://github.com/lttb/reshadow"><img src="https://github.githubassets.com/favicon.ico" alt="github.com/lttb/reshadow" height="16px"></a>
-   / cssinjs / styled components / BEM (block element modifier) / CSS Modules , пропсы <br>
-    <a href="http://htmlbook.ru/samcss/napisanie-effektivnogo-koda"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"> Написание эффективного кода</a><br>
-    <a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a><br>
-    шлюзы<br>
-    <a href="https://whitepaper.tools"><img src="http://whitepaper.tools/favicon.ico" alt="whitepaper tools"> whitepaper.tools</a>
+  </div>
+  <div>
+    <li><a href="https://whitepaper.tools"><img src="http://whitepaper.tools/favicon.ico" alt="whitepaper tools"> whitepaper.tools</a></li>
+    <li><a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"> reshadow </a>
+    <a href="https://github.com/lttb/reshadow"><img src="https://github.githubassets.com/favicon.ico" alt="github.com/lttb/reshadow" height="16px"></a></li>
+    <li>cssinjs / styled components</li>
+    <li>BEM (block element modifier)</li>
+    <li>CSS Modules , пропсы </li>
+    <li><a href="http://htmlbook.ru/samcss/napisanie-effektivnogo-koda"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"> Написание эффективного кода</a></li>
+    <li><a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a></li>
+    <li>шлюзы</li>
   </div>
   <div>
   Backgrounds and Borders 3 //2017<br>
@@ -90,7 +94,7 @@
 </div>
 
 <article>
-  <pre><code class="CSS">
+  <pre><code>
 внешний: тег link rel="stylesheet" href="*.css"
 в документе: тег style /style
 внутри тега: style=""
