--- a/programming/php.html
+++ b/programming/php.html
@@ -74,7 +74,7 @@
 <div>
   install: php, web-server(Apache) , database(MySQL) <br>
   launch: web-server(Apache)
-  <pre><code class="php">
+  <pre><code>
 < ?php 
     echo 'html-cod';  // может принимать список аргументов
     ''  // только текст
