--- a/programming/shablon.html
+++ b/programming/shablon.html
@@ -6,11 +6,10 @@
 	<title>Title</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
-  <script src="../JS/script.js" defer></script>
+  <script src="../JS/main.js" defer></script>
 
-<!-- <link rel="stylesheet" href="../CSS/lightbox.css">
-<script src="../JS/lightbox.js" defer></script>
- -->
+<!--   <link rel="stylesheet" href="../CSS/lb_style.css">
+  <script src="../JS/lb.js" defer></script> -->
 </head>
 
 <body>
@@ -24,19 +23,15 @@
   </div>
 </header>
 
-<div id="links">
+<content class="flex">
 
-</div>
+<nav></nav>
 
-<nav>
+<div id="links"></div>
 
-</nav>
 
-<article>
-
-</article>
+</content>
 
 <footer></footer>
-
 </body>
 </html>
