--- a/programming/vue.html
+++ b/programming/vue.html
@@ -49,7 +49,7 @@
 <article>
   <pre>
     не использует $ и _
-    <code class="javascript">
+    <code>
 Vue.config.keyCodes = { f1: 112 } 
 
 Vue.component('new-component', {  // глобальный компонент
