content angular & go

--- a/guitar/i.html
+++ b/guitar/i.html
@@ -26,6 +26,7 @@
 <div>
   <h2>Gibson Les Paul (1952)</h2>
   <img src="../guitar/GibsonLP.png" alt="" style="float: left">
+  <a href="https://youtu.be/vZHruZTC3hI">В чём кайф Les Paul’ов</a>
 </div>
 
 <div>
@@ -43,6 +44,12 @@
 <div>
   <h2>Fender Stratocaster (1954)</h2>
   <img src="" alt="" style="float: left">
+  <a href="https://youtu.be/wl7ZOyKNtAg">В чём кайф Stratocaster</a>
+</div>
+
+<div>
+  <h2>Fender Telecaster (1949)</h2>
+  <a href="https://youtu.be/9Cjdy8nssAM">В чём кайф Telecaster'ов</a>
 </div>
 
 <div>
