--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Webpack</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/leonardasf1.css">
+  <link rel="stylesheet" href="../CSS/style.css">
   <script src="../JS/main.js" defer></script>
   
     <link rel="stylesheet" href="../CSS/highlight.css">
@@ -22,18 +22,15 @@
     </div>
   </div>
 </header>
-
+<content>
+<div class="flex">
 <div id="links">
   <a href="https://webpack.js.org"><img src="https://webpack.js.org/e0b5805d423a4ec9473ee315250968b2.svg" alt=""></a>
-</div>
-
-<nav>
-
-</nav>
-
-<article>
   <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Антон Кастрицкий</a> 
   <a href="https://yadi.sk/i/9oydqY8iwcY__A">Вебпак, вид сквозь монокль.pdf</a>
+</div>
+
+<article>
 <pre><code>
   npm init // 
 
@@ -100,7 +97,8 @@ module.exports = {
 
 </code></pre>
 </article>
-
+</div>
+</content>
 <footer></footer>
 
 </body>
